--- a/[9] 读书/[9-7] 思辨/4说话.md
+++ b/[9] 读书/[9-7] 思辨/4说话.md
@@ -109,3 +109,53 @@ John
 3）对比
 过去的两年里，每次做完什么事情，都是很开心的告别 => 我两年里，第一次想让时间停下来。
 国庆节与你第一次讨论CG的时候，我就觉得你很不一样 => 即便如此，在整个课程中你还是大大超出了我的预期。
+
+# 演讲的力量
+TED掌门人克里斯。安德森
+很多时候，双方互相说的和听的，原本就是各自了解的东西，那不叫有效沟通，而是闲聊。然而，做到这些已经是一个概率很小的事情了，所以闲聊的双方恨不得喝酒庆祝。
+更有时候，谈话双方都假装我说什么你听得懂，你说什么我也听得懂。
+
+四条建议：
+1. Focus on one major idea
+2. Give your listeners reason to care
+3. Build your idea with familiar concepts
+4. Makeyour idea worth sharing
+
+四种陷阱
+1. 不要推销。要给予，而不是推销，及时你在做的事是推销。
+2. 不要漫谈。要有清晰的脉络和充分的准备
+3. 不要过分谈论你的团队。专注于你所从事工作的本质，专注于渗透其间的伟大思想，而不是专注于你的公司或产品。
+4. 不要只有形式，没有内容
+
+主线：你要把所有的碎片用主线串联起来。删除与主线无关的碎片  
+## 联系
+与观众简历信任。  
+人类在进化中开发了一套武器来保护自己，抵御危险知识对自己世界观的破坏。这种武器叫做：怀疑、不信任、不喜欢。这些武器非常宝贵，但是演讲者需要找到一种方法解除观众的武装
+
+- 一开始就用眼神交流  
+眼神，附以温暖的微笑，能彻底改变观众的接受度
+- 展示脆弱，放下自我
+
+## 讲故事
+- 故事要有一个引起听众共鸣的主人公
+- 激发兴趣、制造悬念、危险
+- 适当提供细节
+- 有令人满意的结局。或有趣、或感人、或给人启迪
+
+## 视觉资料
+糟糕的视觉资料有害，因为它分散了观众的注意力
+用图片的时候：
+- 有些认知用图解释最好，传递文字是你嘴巴的事，视觉资料的目的不会传递文字
+每张图只揭示一个思想，如果解释一张图超过2分钟，最好分解成三四张（这与科学家的天然倾向相反）
+结束对PPT讲解后，只要转换到空白的黑色幻灯片即可，这与观众的注意力会回到你身上
+
+### 视频
+不要超过30秒，不要超过4段。
+
+### 切换
+不用切换方式，除非要幽默或讽刺效果
+
+### 排练
+要充分准备。无论是背诵讲稿式演讲还是现场演讲
+
+注意时间：你的参考时间是可用时间的0.9倍
