--- a/[2] python/[2] 数据类型.md
+++ b/[2] python/[2] 数据类型.md
@@ -1,4 +1,42 @@
 
+
+<!-- toc orderedList:0 depthFrom:1 depthTo:6 -->
+
+* [数字类型](#数字类型)
+  * [整数类型（没有取值范围的限制）](#整数类型没有取值范围的限制)
+  * [浮点类型](#浮点类型)
+  * [复数类型](#复数类型)
+    * [整数->小数->复数](#整数-小数-复数)
+    * [运算符](#运算符)
+* [字符串类型](#字符串类型)
+    * [转义字符\](#转义字符)
+    * [索引](#索引)
+    * [+与*](#与)
+    * [字符串的操作](#字符串的操作)
+    * [format()方法](#format方法)
+    * [enumerate迭代器](#enumerate迭代器)
+* [元组类型（tuple）](#元组类型tuple)
+    * [特点：](#特点)
+  * [生成](#生成)
+  * [方法](#方法)
+  * [特性：](#特性)
+* [列表（list）](#列表list)
+  * [方法(与string类似)](#方法与string类似)
+    * [用索引取数据](#用索引取数据)
+* [dict](#dict)
+  * [构造方法](#构造方法)
+  * [修改](#修改)
+  * [遍历](#遍历)
+  * [操作符](#操作符)
+* [方法](#方法-1)
+  * [取值](#取值)
+* [set](#set)
+  * [构造](#构造)
+  * [方法](#方法-2)
+  * [互转](#互转)
+
+<!-- tocstop -->
+
 - 数字类型，字符串类型
 - 元组类型，列表类型
 - 字典类型，文件类型
