--- a/[2] python/科学计算/[2.1] pandas.md
+++ b/[2] python/科学计算/[2.1] pandas.md
@@ -1,3 +1,28 @@
+<!-- TOC depthFrom:1 depthTo:6 withLinks:1 updateOnSave:1 orderedList:0 -->
+
+- [DataFrame](#dataframe)
+	- [创建](#创建)
+	- [DataFrame转dict](#dataframe转dict)
+	- [Excel读写](#excel读写)
+	- [CSV读写](#csv读写)
+	- [数据切片、筛选](#数据切片筛选)
+		- [通过下标选取数据：](#通过下标选取数据)
+		- [数据筛选](#数据筛选)
+	- [计算新列](#计算新列)
+	- [计算均值、和等](#计算均值和等)
+	- [设置index](#设置index)
+	- [重设索引](#重设索引)
+	- [重命名列](#重命名列)
+	- [改变数据类型](#改变数据类型)
+	- [计算Series每个值的频率](#计算series每个值的频率)
+	- [字符串方法](#字符串方法)
+	- [描述性统计](#描述性统计)
+	- [排序](#排序)
+
+<!-- /TOC -->
+
+
+
 pandas是依赖于numpy的库
 四种数据结构
 - Series：一维数组，Array和Series中则只允许存储相同的数据类型
