--- a/[2] python/科学计算/[2.2] pandas2.md
+++ b/[2] python/科学计算/[2.2] pandas2.md
@@ -1,3 +1,37 @@
+
+
+<!-- toc orderedList:0 depthFrom:1 depthTo:6 -->
+
+* [sort](#sort)
+* [remove duplicates](#remove-duplicates)
+* [remove columns](#remove-columns)
+* [replace](#replace)
+  * [fillna](#fillna)
+* [index和字段修改](#index和字段修改)
+  * [1. 用赋值法修改](#1-用赋值法修改)
+  * [2.用rename修改index和Seris](#2用rename修改index和seris)
+* [列变化](#列变化)
+  * [方法1：map](#方法1map)
+  * [方法2：apply](#方法2apply)
+* [列筛选（bool类型）](#列筛选bool类型)
+  * [1.符号](#1符号)
+  * [2. isin](#2-isin)
+  * [3. str.contains()](#3-strcontains)
+  * [4. isnull](#4-isnull)
+* [groupby](#groupby)
+* [时间序列](#时间序列)
+* [index](#index)
+  * [互转](#互转)
+  * [下面是时间序列中，填充index](#下面是时间序列中填充index)
+  * [插一句，还有一种类型转换astype](#插一句还有一种类型转换astype)
+* [暂时没有学的](#暂时没有学的)
+* [join（类似SQL）](#join类似sql)
+
+<!-- tocstop -->
+
+
+
+
 ```python
 data.describe()
 data.describe(include='all')
