--- a/[2] python/科学计算/[2.1] pandas.md
+++ b/[2] python/科学计算/[2.1] pandas.md
@@ -94,6 +94,7 @@ macrodata.to_csv('d:/foo.csv')
 
 准备数据
 ```python
+import pandas as pd
 d = {'one' : pd.Series([1., 2., 3.], index=['a', 'b', 'c']),'two' : pd.Series([2., 3., 4., 5.], index=['a', 'b', 'c', 'd'])}
 df = pd.DataFrame(d)
 ```
@@ -103,6 +104,7 @@ df = pd.DataFrame(d)
 a=df[['one']]#a是DataFrame
 b=df['one']#b是Series
 ```
+注意：type不同
 
 - 选取行
 ```python
@@ -116,6 +118,8 @@ df.loc['a':'b']#选取ab两行数据，返回DataFrame
 df.loc['a':'b','one']#选取one列的数据，返回Series
 a=df.loc[:'b',['one']]#返回DataFrame
 ```
+注意：用index取数是含头又含尾的
+
 
 - 用数字选取行列：iloc
 含头不含尾
@@ -155,10 +159,23 @@ df.sum(1) #计算行的和
 df.apply(lambda x: x.max() - x.min())#将一个函数应用到DataFrame的每一列，这里使用的是匿名lambda函数，与R中apply函数类似
 ```
 
+
+
 取最值
 ```python
 print df['two'].max()  #  min取最小
 print df['two'].idxmax()  #idxmin取最小
+```
+
+
+## 取index
+
+```py
+df.index
+df.columns
+df.index.values
+df.columns.values
+df.index.name='idx'#设置index的名称
 ```
 
 ## 设置index
