--- a/[9] 读书/[9-4] 外国历史/外国通史.md
+++ b/[9] 读书/[9-4] 外国历史/外国通史.md
@@ -11,13 +11,18 @@
 
 爱琴：克里特，希腊，荷马
 
-亚述王朝
+亚述王朝（闪米特人）
+
+巴比伦帝国
 
 波斯帝国
-希腊----斯巴达（最大的城邦）  波斯与斯巴达战争
+希腊----斯巴达（最大的城邦，伯罗奔尼亚战争）  波斯与斯巴达战争    
 马其顿（希腊北方）  腓力二世，亲马：波斯、掠夺财富
 腓力二世被刺，子亚历山大→东征波斯，大流士临阵脱逃→进入埃及
 
+罗马灭迦太基人，闪米特人仅剩犹太人  
+
+## 罗马与汉帝国
 罗马：高傲的塔克文，暴君
 罗马共和国
 罗马帝国：西西里奴隶起义
