--- a/[9] 读书/[9-4] 外国历史/外国通史.md
+++ b/[9] 读书/[9-4] 外国历史/外国通史.md
@@ -31,11 +31,22 @@
       凯撒（第一皇帝遇刺）：屋大维、安东尼（埃及艳后）、雷必达
 孔雀帝国，佛教
 
-欧亚巨变------游牧民族大迁徙
+## 欧亚巨变------游牧民族大迁徙
+公元3世纪  君士坦丁大帝   
+公元5世纪 阿提拉  
+
    西日耳曼人：撒克逊人、苏维汇人、法兰克人、阿勒曼尼人
    东日耳曼人：哥特人、汪达尔人、伦巴德人
-隋
+## 公元7,8,9世纪
+隋唐盛世  
+阿拉伯崛起：穆罕默德出现。拜占庭与波斯交战耗尽力量。阿拉伯帝国崛起  
+罗马教皇的时代  
+## 公元10世纪
+
 五代十国、辽，西夏、金，北宋（赵匡胤陈桥兵变）、南宋（王安石变法）、契丹（辽）耶律阿保机
+
+1214年蒙古 成吉思汗，窝阔台汗，蒙哥汗（让忽必烈成为中国皇帝）
+
 印度----戎日王朝
 阿拉伯灭波斯
 东罗马帝国（君士坦丁堡、拜占庭）灭哥特
@@ -47,10 +58,13 @@
 奥斯曼兴起，拜占庭灭亡
 西班牙、葡萄牙
 英国打荷兰，英国打法国
-
-英国资产阶级革命，美国独立战争，法国大革命
-工业革命：飞梭→纺纱机（手摇→水力）→织布机→蒸汽机→火车
-德国统一（俾斯麦），打丹麦。丹麦、奥地利（奥匈帝国）、法国，组成德意志帝国。
+## 近代
+英国资产阶级革命，美国独立战争，
+法国大革命，拿破仑（-1815）
+工业革命：飞梭→纺纱机（手摇→水力）→织布机→蒸汽机→火车  
+（1804）铁路，（1835）电报，（1851）英法海底电缆  
+德国统一（俾斯麦），打丹麦。丹麦、奥地利（奥匈帝国）、法国，组成德意志帝国。  
+德国科技接手英法    
 大清帝国，日本明治维新，美国对拉美、墨西哥
 第二次工业革命（电力）
 一战：德、奥匈、意大利vs英法俄（1914-1919）
