--- a/[9] 读书/[9-5] 社会经济学/7心理学.md
+++ b/[9] 读书/[9-5] 社会经济学/7心理学.md
@@ -224,3 +224,23 @@
 >唠叨：控制型咒语
 巨婴想象：行动能力差，做任何事最求完美
 家庭政治：每个人都在累积权力资本和道德资本
+
+
+# 另类天才：走近天才症候群
+学术界对白痴天才的一些解释  
+- 直观心像。例如照片似记忆
+这是儿童才有的技能。“天才症候”发育缓慢，所以此能力未消失
+- 本身拥有天才基因，经过赞扬后得到强化
+- 感觉剥夺后的代偿性功能
+- 据研究，胎儿在发育到某阶段，脑细胞大量凋亡（未连接的脑细胞），“天才症候”跳过了这个阶段
+- 我们看待世界是“一英里宽，一毫米深”。白痴天才正好相反，是“一英里神，一毫米宽”，因为不见森林，所以以常人看他们不同。
+
+## 天才症候群的主要“症状”
+- 音乐
+- 绘画
+- 雕塑
+- 速算（包括日历）
+- 报时
+- 超感官（作者对这方面的案例表示怀疑）
+
+>我有些羡慕所谓“白痴天才”，不是因为他们天赋异禀，而是因为社会无法把一些所谓的成熟强加给他们。普通人是用油灯看到昏暗的全景。“白痴天才”是用聚光灯清晰地看到某个区域，却看不到全景。
