--- a/[9] 读书/[9-6] 科技/物理科学.md
+++ b/[9] 读书/[9-6] 科技/物理科学.md
@@ -22,3 +22,23 @@
 - 壁虎：1、大气压不是原因，因为脚上没有可以挤出空气的杯状结构。2、摩擦力可以解释在墙上爬，但不能解释天花板上爬3、胶水状粘稠物有作用，但壁虎脚上没有类似腺体。4、答案：几百万个细毛构成的网状结构，分子间作用力
 - 为何飞蛾扑火？1、干扰了自然光导航2、飞蛾眼睛适应了光线后，一旦离开就会“失明”，只好飞回来
 - 为何一些遗传病多见于男性？X染色体上的隐性基因，且Y染色体没有对应。
+
+# 《微漪之塘》
+## 一宇宙的进化
+## 二物质的本质
+物质是什么？
+- 古代神秘主义者认为物质是一种复杂的能量
+- 有些古代概念认为是空间的凝聚
+我们世界上所观察到的任何东西，都不可能绝对的有把握被认识。绝不可能排除对“它是什么，甚至它是否存在”的怀疑  
+只有心理活动（包括怀疑本身）这一事实是确凿无疑的。  
+柏拉图：实在是一种“说的倒像是真的故事”  
+## 生命现象
+## 心灵的表现
+有些身体修复功能，似乎不能由进化论解释  
+频死体验，有正序、反序、交叉，但没有任何事被遗忘  
+
+- 超感知觉ESP，
+- 遥视remote-viewing，
+- 自发的文化联系
+
+自然界是全息照片，因此每一部分都与整体有一定的关联。第五种场，便是“全息场”  
