--- a/[2] python/科学计算/[1.1] numpy.md
+++ b/[2] python/科学计算/[1.1] numpy.md
@@ -61,6 +61,7 @@ numpy.linspace(0,1,5.5,endpoint=False)#endpoint用来指定是否包含末尾值
 numpy.zeros((2,3))
 numpy.ones((3,3))
 numpy.empty((2,3),numpy.int)#只分配内存，不初始化，因此速度很快
+numpy.eye(3)
 ```
 
 - 创建与a大小相同的数组
