--- a/[2] python/科学计算/[1.2] numpy.md
+++ b/[2] python/科学计算/[1.2] numpy.md
@@ -186,14 +186,29 @@ b=np.random.uniform(0,1,size=(10,1))
 A=np.linalg.det(a)
 ```
 
+## 矩阵的转置
+```
+a.T
+```
+
 ## 矩阵的逆
 ```
 np.linalg.inv(a)
 ```
+## 矩阵的秩
+```
+np.linalg.matrix_rank(a)
+```
 ## 矩阵的积
+```
 np.dot(a,b)
-注意，这里的a,b必须是多维的，否则返回的是內积
+```
+注意，这里的a,b必须是多维的，否则返回的是內积  
 
+## 矩阵的点积
+```
+a*b
+```
 
 # IO
 
