--- a/[2] python/科学计算/[1.2] numpy.md
+++ b/[2] python/科学计算/[1.2] numpy.md
@@ -190,7 +190,10 @@ A=np.linalg.det(a)
 ```
 a.T
 ```
-
+## 矩阵的特征值特征向量
+```
+eigenvalues,eigenvectors=np.linalg.eig(a)
+```
 ## 矩阵的逆
 ```
 np.linalg.inv(a)
