--- a/[9] 读书/[9-6] 科技/大数据.md
+++ b/[9] 读书/[9-6] 科技/大数据.md
@@ -1,4 +1,47 @@
-用户画像
+
+
+
+人脸识别：
+用途：
+1. 识别出人脸
+2. 识别不同的人
+
+做的事：
+1. 抛除光线、角度、表情
+2. 定位于两眼距离、颧骨高度
+
+
+### 网页排序
+#### 方案1：按照访问量
+缺点：
+1. 是抽样数据
+2. 波动、季节性
+3. 访问量低的网页，未必不重要
+4. 刷访问量的
+
+#### 方案2：PageRank
+
+主要思想：  
+1. 越重要的网页，页面上的链接质量越高
+2. 越重要的网页，越容易被其它重要网页引用
+
+方法：转移概率矩阵  
+转化为求特征值为1的特征向量问题  
+也可以用迭代法求解  
+
+- 问题1：等级泄漏rank leak。某个网页没有外出链接的问题（矩阵某一列全是0）
+- 问题2：等级沉默rank sink。几个网页成为环，并且不向外链接。
+
+解决：引入阻尼系数$\alpha$，假定用户可以以概率$1-\alpha$从某个网页跳到任意网页(包括自己)
+
+
+### 图像处理
+去噪声  
+去模糊  
+图像修复   
+
+
+###  用户画像
 
 业务属性：
 1、最近使用的业务
