--- a/[9] 读书/[9-7] 思辨/4说话.md
+++ b/[9] 读书/[9-7] 思辨/4说话.md
@@ -159,3 +159,73 @@ TED掌门人克里斯。安德森
 要充分准备。无论是背诵讲稿式演讲还是现场演讲
 
 注意时间：你的参考时间是可用时间的0.9倍
+
+
+# 17个牛逼的说话技巧，一句话搞定对方
+1、交代工作却不破坏对方情绪
+　　
+　　“能不能抽空过来一下……”
+　　
+　　2、托付他人重任时
+　　
+　　“有件事要拜托给你才行……”
+　　
+　　3、附加评价时，呼应对方的一句话
+　　
+　　“原来如此，这样啊!”
+　　
+　　4、想要得到同事或他人的好感，对其作评价时可以欲扬先抑。
+　　
+　　“做法虽然强硬，但是还算得上细致周到。”
+　　
+　　5、提出反对意见的方法
+　　
+　　“我理解你的想法，但咱们可以一起来看看有没有什么更好的方法……”
+　　
+　　6、讷于言反而能展现内心的真诚
+　　
+　　“我的嘴，其实很笨……”
+　　
+　　7、直截了当询问想要得到的信息
+　　
+　　“请直说能给我便宜多少?”
+　　
+　　8、想要发言时的完美切入法
+　　
+　　“话又说回来了……”
+　　
+　　9、“鹦鹉学舌”法，逼近对方的真实想法
+　　
+　　“这个很困难啊。”“是很困难吗?”
+　　
+　　10、这样发问后，对方绝对不会说“不”
+　　
+　　“你也应该觉得××是比较好的，是吧?”
+　　
+　　11、尊重以“忙”作为拒绝借口的人，杀个回马枪
+　　
+　　“百忙之中打扰，真是过意不去……”
+　　
+　　12、若有事拜托别人，先从赞誉开始
+　　
+　　“您好像对园艺很是了解……”
+　　
+　　13、不让对方说“不”的二选一的提问法
+　　
+　　“是喝红酒还是喝啤酒呢?”
+　　
+　　14、倘若找到了“共同点”就可以一举获胜
+　　
+　　“真巧了，咱们不是老乡吗?”
+　　
+　　15、“推敲意向型”请求，让对方无法拒绝
+　　
+　　“你可不可以帮我做××啊?”
+　　
+　　16、表明对对方的期待会得到意外的效果
+　　
+　　“完成这项工作，非你莫属……”
+　　
+　　17、回答“不行”的委婉表达形式
+　　
+　　“我要先考虑考虑……”
