--- a/[2] python/科学计算/[2.2] pandas2.md
+++ b/[2] python/科学计算/[2.2] pandas2.md
@@ -25,7 +25,6 @@
   * [下面是时间序列中，填充index](#下面是时间序列中填充index)
   * [插一句，还有一种类型转换astype](#插一句还有一种类型转换astype)
 * [暂时没有学的](#暂时没有学的)
-* [join（类似SQL）](#join类似sql)
 
 <!-- tocstop -->
 
@@ -164,6 +163,7 @@ groupby后面可以接的方法：
 ```
 sum mean median
 count
+size
 ```
 
 
@@ -223,11 +223,3 @@ df.filter
 ```
 data.group.groupby(data.group).count()
 ```
-
-# join（类似SQL）
-```python
-import pandas as pd
-left = pd.DataFrame({'group': ['a', 'a', 'a', 'b','b', 'b', 'c', 'c','c'],'ounces': [4, 3, 12, 6, 7.5, 8, 3, 5, 6]})
-right = pd.DataFrame({'label':['a','b','c'],'value':['alpha','beta','charlie']})
-inner_joined = pd.merge(left, right, how='inner', left_on='group', right_on='label')
-```                                        
