--- a/[2] python/科学计算/[1.2] numpy.md
+++ b/[2] python/科学计算/[1.2] numpy.md
@@ -1,4 +1,3 @@
-
 <!-- TOC depthFrom:1 depthTo:6 withLinks:1 updateOnSave:1 orderedList:0 -->
 
 - [多维取数规则](#多维取数规则)
@@ -24,8 +23,12 @@
 - [统计函数](#统计函数)
 - [线性代数](#线性代数)
 	- [行列式](#行列式)
+	- [矩阵的转置](#矩阵的转置)
+	- [矩阵的特征值特征向量](#矩阵的特征值特征向量)
 	- [矩阵的逆](#矩阵的逆)
+	- [矩阵的秩](#矩阵的秩)
 	- [矩阵的积](#矩阵的积)
+	- [矩阵的点积](#矩阵的点积)
 - [IO](#io)
 	- [存储](#存储)
 		- [tofile&fromfile](#tofilefromfile)
@@ -34,7 +37,6 @@
 		- [savetxt&loadtxt](#savetxtloadtxt)
 
 <!-- /TOC -->
-
 
 # 多维取数规则
 ```
@@ -53,34 +55,6 @@ a[np.array(lidx)]
 
 
 
-# random
-手册：https://docs.scipy.org/doc/numpy/reference/routines.random.html
-## 随机种子
-numpy.random.seed(seed=None)
-## shuffle重新洗牌
-```python
-np.random.shuffle(arr)#直接改arr，返回none
-```
-
-多维数组：只shuffle第0维
-## choice随机选数
-numpy.random.choice(a, size=None, replace=True, p=None)
-## 生成随机数
-
-np.random.beta()
-
-numpy.random.f(dfnum, dfden, size=None)
-
-numpy.random.normal(loc=0.0, scale=1.0, size=None)
-
-numpy.random.randint(low, high=None, size=None, dtype='l')
-左闭右开的整数
-
-numpy.random.random_integers(low, high=None, size=None)
-开区间的整数
-
-numpy.random.uniform(low=0.0, high=1.0, size=None)
-均匀分布
 
 # 函数
 
@@ -177,41 +151,6 @@ histogram#返回值和区间
 ```
 
 
-# 线性代数
-## 行列式
-```
-import numpy as np
-a=np.random.uniform(0,1,size=(10,10))
-b=np.random.uniform(0,1,size=(10,1))
-A=np.linalg.det(a)
-```
-
-## 矩阵的转置
-```
-a.T
-```
-## 矩阵的特征值特征向量
-```
-eigenvalues,eigenvectors=np.linalg.eig(a)
-```
-## 矩阵的逆
-```
-np.linalg.inv(a)
-```
-## 矩阵的秩
-```
-np.linalg.matrix_rank(a)
-```
-## 矩阵的积
-```
-np.dot(a,b)
-```
-注意，这里的a,b必须是多维的，否则返回的是內积  
-
-## 矩阵的点积
-```
-a*b
-```
 
 # IO
 
