--- a/[2] python/科学计算/[2.1] pandas.md
+++ b/[2] python/科学计算/[2.1] pandas.md
@@ -72,8 +72,8 @@ df=pd.DataFrame(d,index=['a','b'],columns=['c','d','e'])
 df['f']=df['c']*2+df['d']+1
 ```
 
-
-## 取index
+## index操作
+### 取index
 
 ```py
 df.index
@@ -83,7 +83,7 @@ df.columns.values
 df.index.name='idx'#设置index的名称
 ```
 
-## 设置index
+### 设置index
 ```python
 a=df.set_index('one')
 ```
@@ -92,12 +92,33 @@ a=df.set_index('one')
 - 不改变df
 - 不共享内存
 
-## 重设索引
+### 重设索引
 
 ```python
 df.reset_index(inplace=True)
 ```
 使得索引变成一列，0,1,2,3...变成索引
+
+### 自定义索引
+reindex
+```py
+import pandas as pd
+df=pd.DataFrame({'one':[1,2,3],'two':[7,6,5]},index=['a','b','c'])
+
+
+df.reindex(list('abcde'),method='ffill')
+#index太多，默认填值为nan，可以ffill，bfill填充
+
+df.reindex(list('abcde'),fill_value=0)
+#用指定的数填充
+```
+|参数|说明|
+|--|--|
+|index||
+|method|ffill,bfill|
+|fiil_value||
+|limit|向前或向后填充时，最大填充量|
+|copy|默认为True，否则不复制|
 
 ## 重命名列
 ```python
