--- a/[6] 数学/[6-1] 回归/分布滞后模型.md
+++ b/[6] 数学/[6-1] 回归/分布滞后模型.md
@@ -1,4 +1,4 @@
-# 滞后变量模型一般形式
+## 滞后变量模型一般形式
 $Y_t=\alpha +\beta_0 X_t+\beta_1 X_{t-1}+...+\beta_s X_{t-s}$
  $+\gamma_1 Y_{t-1}+\gamma_2 Y_{t-2}+...+\gamma_q Y_{t-q}+u_t$
 
@@ -11,7 +11,8 @@ q表示被解释变量的滞后长度
 $Y_t=\alpha +\beta_0 X_t+\beta_1 X_{t-1}+...+\beta_s X_{t-s}+u_t$
 根据s取值的有限和无限，分为 **有限分布滞后模型** 和 **无限分布滞后模型**
 
-## 自回归模型
+## AR模型
+又叫自回归模型(autoregression,AR)
 $Y_t=\alpha +\beta_0 X_t+\gamma_1 Y_{t-1}+\gamma_2 Y_{t-2}+...+\gamma_q Y_{t-q}+u_t$
 # 分布滞后模型
 $Y_t=\alpha +\beta_0 X_t+\beta_1 X_{t-1}+...+\beta_s X_{t-s}+u_t$
