--- a/[6] 数学/概率论.md
+++ b/[6] 数学/概率论.md
@@ -26,4 +26,48 @@
 
 $(S,\epsilon,Pr)$叫做 **概率空间** （probability space）  
 
-**零事件**
+**零事件**  如果$Pr(A)=0$,那么事件$A \in \epsilon$在Pr下是一个 **零事件** (null event)  
+
+**完备的测度空间** 如果A是一个`零事件`，且$\forall A' \subset A \ni A' \in \varepsilon$,那么$(S,\varepsilon,Pr)$称为`完备概率空间`
+
+## 条件概率
+
+给定一个`样本空间`S，一个`完全事件集合`$$\varepsilon=\{A \mid A \subset S\}$$,一个`概率测度` $Pr:\varepsilon \to [0,1]$，  
+给定事件$B\in \varepsilon,Pr(B)>0$,  
+那么，对于$A \in \varepsilon$，定义 **条件概率** 为$Pr(A \mid B)=\dfrac{P(A \cap B)}{P(B)}$  
+
+这种定义的好处是，$Pr(\star \mid B)$符合概率测度的定义  
+
+### 条件PDF
+
+p.d.f是$f(x,y)$  
+定义：$f(x\mid y)=\dfrac{f(x,y)}{f(y)}$  
+
+
+定理： $f(y)=\sum\limits_{y} f(x\mid y)f(y)$
+
+### 条件期望
+
+**联合期望** 定义为：  
+$E[g(x_1,x_2)]=\sum\limits_{(x_1,x_2)}g(x_1,x_2)f(x_1,x_2)$  
+
+**条件期望** 定义为：  
+$E[g(X_1) \mid X_2=x_2]=\sum\limits_x g(x_1) f(x_1 \mid x_2)$  
+记为$E(g(X_1)\mid X_2)$  
+
+注意:  
+条件期望可以视为这样一个函数：$s \in S ,s \to E(g(X_1)\mid X_2(s))$  
+$E(g(X_1)\mid X_2)$本身是一个随机变量。  
+
+
+## 独立事件
+### 独立事件
+
+**独立事件**
+$Pr(A_1 \cap A_2)=Pr(A_1)Pr(A_2)$  
+
+多个事件独立的定义也类似。  
+注意，多个事件两两独立，不一定独立
+
+### 独立随机变量
+Def：**独立随机变量** ： 离散样本空间S上的随机变量$X_1,X_2$是 **独立随机变量** ，如果对于任意$(a_i,b_i)\subset R$,$X^{-1}[(a_1,b_1)],X^{-1}[(a_2,b_2)]$是独立事件。  
