--- a/[6] 数学/概率论.md
+++ b/[6] 数学/概率论.md
@@ -59,6 +59,41 @@ $E[g(X_1) \mid X_2=x_2]=\sum\limits_x g(x_1) f(x_1 \mid x_2)$
 条件期望可以视为这样一个函数：$s \in S ,s \to E(g(X_1)\mid X_2(s))$  
 $E(g(X_1)\mid X_2)$本身是一个随机变量。  
 
+定理：**全期望定理**(law of total expactation)  
+$E_{X_2}[E_{X_1\mid X_2}[g(X_1) \mid X_2]]=\sum_{x_1}g(x_1)f(x_1)$  
+也就是说，  
+$E[X]=E[E[X \mid Y]]$
+
+### 条件方差
+**方差** 定义为：  
+$E[(X-EX)^2]$  
+
+定理：$Var(X)=EX^2-(EX)^2$  
+
+**条件方差** 定义为：  
+$Var[X \mid Y]=\sum\limits_i (x_i - E[X \mid Y])^2 f(x_i \mid Y)$  
+定理：$Var[X]=E[Var[X \mid Y]]+Var[E[X\mid Y]]$  
+
+### 矩
+#### n阶距
+
+$E[X^n]$  
+
+#### n阶中心距
+
+$E[(X-EX)^n]$
+
+#### n阶绝对距
+$E[ \mid X\mid^n]$
+
+#### 距母函数
+moment-generating function,(m.g.f)  
+$M_X(t)=E[e^{Xt}]$
+
+#### 特征函数
+characteristic function,(c.f.)  
+$C_X(t)=E[e^{iXt}]$  
+其中i是虚数单位。  
 
 ## 独立事件
 ### 独立事件
