--- a/[6] 数学/概率论.md
+++ b/[6] 数学/概率论.md
@@ -23,6 +23,57 @@ characteristic function,(c.f.)
 $C_X(t)=E[e^{iXt}]$  
 其中i是虚数单位。  
 
+
+## 切比雪夫不等式
+
+**切比雪夫不等式**  
+X的均值是u,方差是$\sigma^2$,那么，$\forall t>0,Pr[\mid X-u \mid \geq t \sigma] \leq \dfrac{1}{t^2}$  
+等价表示：  
+$Pr[\mid X-u \mid \geq t s] \leq \dfrac{\sigma^2}{s^2}$  
+
+**切比雪夫不等式的推广**  
+X的均值是u，n阶中心距$u_{\mid n \mid}=E[\mid X-u \mid ^n],(n \geq 1)$,有  
+$Pr[\mid X-u \mid \geq t]\leq \dfrac{u_{\mid n\mid}}{t^n}$  
+
+**切比雪夫单边不等式**  
+X的均值是u,方差是$\sigma^2$,那么，$\forall s>0,Pr[ X-u  \geq s] \leq \dfrac{\sigma^2}{s^2+\sigma^2}$  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 ## 独立事件
 ### 独立事件
 
@@ -34,3 +85,28 @@ $Pr(A_1 \cap A_2)=Pr(A_1)Pr(A_2)$
 
 ### 独立随机变量
 Def：**独立随机变量** ： 离散样本空间S上的随机变量$X_1,X_2$是 **独立随机变量** ，如果对于任意$(a_i,b_i)\subset R$,$X^{-1}[(a_1,b_1)],X^{-1}[(a_2,b_2)]$是独立事件。  
+
+
+## 样本矩
+
+### 样本均值
+定义：  
+$\bar X=\dfrac{1}{n} \sum\limits_{j=1}^n X_j$  
+
+特点：  
+$E\bar X =EX$  
+$Var \bar X =Var X/n$  
+
+### 样本方差  
+定义：  
+$V=\dfrac{1}{n-1}\sum\limits_{j=1}^n (X_j -\bar X)^2$  
+
+特点：  
+$EV=Var X$(分母是n-1的合理性)  
+
+
+
+
+## 生成给定分布的随机数
+精确的定理不写，不准确的描述一下：(很容易理解)  
+如果r服从[0,1]均匀分布，那么$F^{(-1)}(r)$服从的分布，其pdf为$F(x)$  
