--- a/[9] 读书/[9-5] 社会经济学/2魔鬼经济学.md
+++ b/[9] 读书/[9-5] 社会经济学/2魔鬼经济学.md
@@ -80,3 +80,33 @@
 他通过回收货币，增加了所有货币持有者的收益，而他人的收益间接增加就业机会
 事情不会就此打住，这位事业心强的制衣商人，开始宰割竞争对手，或者逼迫他们添置机器，这样促使他们添置机器，使机器商增加了就业岗位。
 大衣便宜了，仍难能有利润。节省下来的利益向消费者转移，消费者购买更多的大衣或者消费更多其它商品，又会增加就业岗位。
+
+# 《怪诞行为学》
+
+## 1锚定效应
+
+说到底，我们也是一群幼鹅
+
+## 3免费的魔力  
+人们通常对免费的反应过度。  
+即使定价一分钱，也与免费的效果相差巨大。  
+
+## 4社会规范&市场规范  
+
+如果你想把关系留在社会规范，千万别提价格。  
+
+对员工来说，虽然宁愿选择1000元的现金，而不是价值1000元的礼物。但是礼物更容易把关系限定在社会规范中。因此礼物的价值通常被低估了。    
+白干活高兴，干活赚钱反而不高兴。  
+
+## 5“热烈”比我们想象还热
+
+冲动下的人，和理性下的人，是完全不同的人。  
+
+## 6所有权的代价
+同样的价钱，人们更不喜欢失去一件东西。人们对已经拥有的东西迷恋不能自拔  
+"虚拟所有权"是广告商的伎俩之一。让你想象你已经拥有它了，你就不太可能再理性选择。  
+
+
+## 10现金能使我们更诚实
+
+敢偷可乐的人不敢偷现金  
