--- a/[9] 读书/[9-7] 思辨/杜拉拉.md
+++ b/[9] 读书/[9-7] 思辨/杜拉拉.md
@@ -286,3 +286,29 @@
 　　早日实现退休理想--你需要眼光和资格。 共勉2007
 
 　　李都看罢全文，叹道：“我若早些看到此文，也早数年做老大了。难怪俗话说，找个好老婆，少奋斗十年!果不吾欺!”
+
+
+## 杜拉拉升职记2：华年似水
+
+### 1
+判断力好是高潜力人才的头一条标准，如果判断不对，那出发点就错了，再努力也是白费劲。  
+
+判断力好的标准：
+1. 先于他人识别风险和机会，并采取行动把握先机和防范风险
+2. 复杂困难的情况下，能快速抓住问题的关键
+3. 正确解读他人的动机和欲望。  
+
+
+### 2
+“无论你做出怎样的决定，我都支持你”实际含义是“我将不提供任何支撑”
+
+### 3
+带人要有完整的计划，首先设置清晰的目标，要把新人训练到什么程度。充分考虑工作目标和新人水平。
+
+新人业务能力有4个等级
+1. 需要他人带领才能完成任务
+2. 主管给予常规关注
+3. 独立完成任务，还能教别人
+4. 经验形成书面化、成体系的东西。
+
+3级和4级，自己去做的时候，水平差别不见得很大，但是。。。
