--- a/[9] 读书/[9-7] 思辨/杜拉拉.md
+++ b/[9] 读书/[9-7] 思辨/杜拉拉.md
@@ -312,3 +312,25 @@
 4. 经验形成书面化、成体系的东西。
 
 3级和4级，自己去做的时候，水平差别不见得很大，但是。。。
+
+### 授权的依据
+
+1. 员工的能力：技巧、判断力、经验
+2. 员工的人品：是否值得信赖、责任心、嘴严
+3. 风险：重大事件自己跟进
+
+员工的授权程度：（分级）
+1. 等主管吩咐
+2. 主动问主管：我能干什么，我能怎样帮助同事
+3. 让boss做选择题
+4. 采取行动解决，并汇报：发生了什么，怎么处理，结果如何
+5. boss可以高度信任，甚至对别的员工说，以后这类事情，你们不用来找我了，让某某决定就行了
+
+### 5
+员工认为工资太低--这不见得有问题；但如果很对人任务他的将近和他的工作表现满意挂钩--这个就可能有问题了，因为好的企业管理应该区分业绩表现，论功行赏。”
+
+看企业自己的薪酬战略是什么，企业如果任务我就是要做行业的老大，而不拥有最优秀的人才不可能是老大，那么薪酬就一定要有竞争力，得达到75分位才行。如果企业通过薪资调查，确定自己的薪资水平达到了75分位，那么，即使员工认为薪资太低，企业也并不需要再涨薪资，只要给员工解释清楚目前薪资已经达到的水平就行了，因为很多时候，员工不见得明白，他的工资已经不低了，所以他才满意。
+
+### 6
+
+　　拉拉先说：“乔治，我知道，我这一上任，你更忙了。因为每个新老板上任的头两个月，都会向下属索取很多资料，问很多问题--这必定会占用你不少时间。你再克服克服，过两个月，等我熟悉情况了，你就会享受到新经理的好处了。”拉拉的意思，虽然索取信息是做主管的权力，还是该向当事人打个招呼，至少表明你意识到你的到来增加他工作量了，让人家能感受好一点。
