--- a/[9] 读书/[9-5] 社会经济学/教材/[1.1] 教材经济学.md
+++ b/[9] 读书/[9-5] 社会经济学/教材/[1.1] 教材经济学.md
@@ -79,7 +79,7 @@ $e_M=\dfrac{\Delta Q/Q}{\Delta M/M}$
 
 - 均衡：
 
-## 消费论
+## 效用论
 
 - 基数效用：边际效用分析法
 - 序数效用：无差异曲线分析法
@@ -89,12 +89,12 @@ $s.t. P_1X_1+P_2X_2+...P_nX_n=I$
 推论：不变的货币边际效用
 $\dfrac{MU_1}{P_1}=\dfrac{MU_2}{P_2}=...=\dfrac{MU_n}{P_n}=\lambda$
 
-## 偏好的性质
+### 偏好的性质
 - 偏好的完全性 $A>B,A<B,A=B$
 - 偏好的传递性
 - 偏好的非饱和性：商品较多的效用一定大
 
-## 无差异曲线的性质
+### 无差异曲线的性质
 - 无数条
 - 不相交
 - 凸向原点
