--- a/[2] python/科学计算/[2.1] pandas.md
+++ b/[2] python/科学计算/[2.1] pandas.md
@@ -31,9 +31,6 @@ dates = pd.date_range('20130101',periods=6)
 用以上方法生成时间序列后，可以用index=dates
 
 
-# index
-
-
 # 暂时没有学的
 
 df.filter
@@ -41,3 +38,6 @@ df.filter
 ```
 data.group.groupby(data.group).count()
 ```
+
+## 没学会
+df.diff是差分
