--- a/[9] 读书/[9-7] 思辨/2 批判性思维/清醒思考的艺术.md
+++ b/[9] 读书/[9-7] 思辨/2 批判性思维/清醒思考的艺术.md
@@ -29,22 +29,19 @@
 如果卖出股票，股市上涨，你会被证券公司辞退。  
 如果卖出股票，股市下跌，你仅仅收获一些名声。  
 
-所以，你
+所以，你几乎肯定会买入股票，除非你有十足的把握股市会下跌。  
 
 ### 不行动谬误
 
-你不救一个人，跟你杀害一个人，实质上是一回事，但受到的来自他人和自己的谴责不一样。
+你不救一个人，跟你杀害一个人，实质上是一回事。但受到的他人的谴责不一样。收到自己的谴责也不一样。  
 
-很多时候，我们更喜欢让某人自己撞刀口，而不是故意伤害他。
+很多时候，我们更喜欢让某人自己撞刀口，而不是故意伤害他。  
 
-有一种药物，针对濒死病人，20%致死，80%救人。你批准吗？
-如果你批准了，每个死亡案例都会让你承受巨大的社会压力。
-
-
+有一种药物，针对濒死病人，20%致死，80%救人。你批准吗？  
+如果你批准了，每个死亡案例都会让你承受巨大心理压力，甚至巨大的社会压力。    
 
 
-
-我们大脑的存在是为了复制，而不是为了发现真理。谁说服了别人，谁就确保了资源。
+我们大脑的存在是为了复制，而不是为了发现真理。因为谁说服了别人，谁就确保了资源。
 
 
 ### 确认谬误
@@ -76,10 +73,10 @@
 
 ### 23禀赋效应
 
-我们出售自己拥有的物品时，我们要求的钱，多于我们愿意买它的钱
-这是因为我们拥有某件物品时，失去它时的痛苦，高于理性
+我们出售自己拥有的物品时，我们要求的钱，多于我们愿意买它的钱  
+这是因为我们拥有某件物品时，失去它时的痛苦，高于理性  
 
 ### 赌徒谬误
 
 一个城市的平均智商是100，你随机选了50人，你测得的智商是150，那么50人的平均智商是多少呢？
-答案是101
+答案是101，而不是100  
