--- a/[6] 数学/[6-2] 分析/微积分.md
+++ b/[6] 数学/[6-2] 分析/微积分.md
@@ -1,3 +1,5 @@
+# 123
+## ASS
 ### 几个连续性的判断定理
 
 #### 1
@@ -7,7 +9,7 @@
 2. $f(x)+g(x)$
 3. $f(x)-g(x)$
 4. $f(x)g(x)$
-5. $\dfrac{f(x)}{g(x)},if g(x_0) \neq 0$
+5. $\dfrac{f(x)}{g(x)},if \space g(x_0) \neq 0$
 
 #### 2
 $f(x)$在$x_0$处连续，$f(x)$在$x_0$附近的开区间是一一映射，那么,  
