--- a/[2] python/科学计算/[2.1] pandas.md
+++ b/[2] python/科学计算/[2.1] pandas.md
@@ -1,23 +1,29 @@
 <!-- TOC depthFrom:1 depthTo:6 withLinks:1 updateOnSave:1 orderedList:0 -->
 
 - [DataFrame](#dataframe)
-	- [创建](#创建)
-	- [DataFrame转dict](#dataframe转dict)
-	- [Excel读写](#excel读写)
-	- [CSV读写](#csv读写)
-	- [数据切片、筛选](#数据切片筛选)
-		- [通过下标选取数据：](#通过下标选取数据)
-		- [数据筛选](#数据筛选)
 	- [计算新列](#计算新列)
-	- [计算均值、和等](#计算均值和等)
-	- [设置index](#设置index)
-	- [重设索引](#重设索引)
+	- [index操作](#index操作)
+		- [取index](#取index)
+		- [设置index](#设置index)
+		- [重设索引](#重设索引)
+		- [自定义索引](#自定义索引)
+- [index太多，默认填值为nan，可以ffill，bfill填充](#index太多默认填值为nan可以ffillbfill填充)
+- [用指定的数填充](#用指定的数填充)
 	- [重命名列](#重命名列)
 	- [改变数据类型](#改变数据类型)
 	- [计算Series每个值的频率](#计算series每个值的频率)
 	- [字符串方法](#字符串方法)
-	- [描述性统计](#描述性统计)
-	- [排序](#排序)
+- [sort](#sort)
+- [index和字段修改](#index和字段修改)
+- [列变化](#列变化)
+	- [方法1：map](#方法1map)
+- [my_dict是一个字典，key是data['food']中的元素，values是输出Series中的元素](#mydict是一个字典key是datafood中的元素values是输出series中的元素)
+	- [方法2：apply](#方法2apply)
+- [列筛选（bool类型）](#列筛选bool类型)
+- [groupby](#groupby)
+- [时间序列](#时间序列)
+- [index](#index)
+- [暂时没有学的](#暂时没有学的)
 
 <!-- /TOC -->
 
@@ -32,35 +38,6 @@ pd.Series([1., 2., 3.], index=['a', 'b', 'c'])#赋上一个index，默认是0,1,
 
 # DataFrame
 
-
-## DataFrame转dict
-```python
-df.to_dict(orient='Series')
-```
-返回一个Series组成的dict
-
-## Excel读写
-- 从EXCEL读入DataFrame：
-
-```python
-bonus = pd.read_excel('bonus_schedule.xls')
-bonus.head(3)
-```
-
-- 将DataFrame写入EXCEL：
-```python
-bonus.to_excel('foo1.xlsx', sheet_name='sheet1')
-```
-
-## CSV读写
-- 读入csv
-```python
-macrodata = pd.read_csv('macrodata.csv')
-macrodata.head(1)
-```
-
-- 写入csv
-macrodata.to_csv('d:/foo.csv')
 
 
 
@@ -141,4 +118,104 @@ df['index'].value_counts()
 df['index'].str.upper()
 df['index'].str.len()
 df['index'].str.contains('a')#字符中是否包含a
+```
+
+
+
+
+
+```python
+data.describe()
+data.describe(include='all')
+```
+返回的是DataFrame格式的描述性统计数据
+
+```
+data.info()
+```
+
+# sort
+排序
+有inplace项
+```python
+data.sort_values(by=['group','ounces'], ascending=[False, True], inplace=True)
+```
+
+
+
+
+# index和字段修改
+
+
+
+
+# 列变化
+
+## 方法1：map
+
+```python
+data['animal'] = data['food'].map(str.lower).map(my_dict)
+#my_dict是一个字典，key是data['food']中的元素，values是输出Series中的元素
+```
+
+## 方法2：apply
+
+```python
+data.apply(func1,axis='columns')#返回Series
+```
+
+func1的规则：
+输入是一行
+```python
+def func1(series):
+    #series的类型是Series，其内容是DataFrame的一行，
+    #return内容就是data.apply这个series中的元素
+```
+
+# 列筛选（bool类型）
+
+
+
+
+# groupby
+```python
+df.groupby('key1').max()#生成一个DataFrame，存入分组后每一列的最大值
+```
+
+分组求和
+```python
+df.groupby((df['key1'],df['key2'])).sum()
+```
+groupby后面可以接的方法：
+```
+sum mean median
+count
+size
+```
+
+
+Series后面可以接的方法
+```python
+value_counts()#与groupby.count的区别
+cumsum
+...(自己查)
+```
+
+# 时间序列
+唯一的区别是index是time
+```python
+dates = pd.date_range('20130101',periods=6)
+```
+用以上方法生成时间序列后，可以用index=dates
+
+
+# index
+
+
+# 暂时没有学的
+
+df.filter
+
+```
+data.group.groupby(data.group).count()
 ```
