--- a/[9] 读书/[9-7] 思辨/杜拉拉.md
+++ b/[9] 读书/[9-7] 思辨/杜拉拉.md
@@ -178,72 +178,76 @@
 
 拉拉小时候，老师教导大家说：劳动创造世界。因此她一直不惜力气热爱劳动，不论是脑力劳动还是体力劳动。
 
-　　拉拉又向来以为，做下属的就要多为上司分担，少麻烦上司，尽量自己摆平各种困难，否则老板要你这个下属干什么用。
+拉拉又向来以为，做下属的就要多为上司分担，少麻烦上司，尽量自己摆平各种困难，否则老板要你这个下属干什么用。
 
-　　基于上述两点认识，拉拉总是很少麻烦李斯特，自己悄没声息地就把许多难题给处理了。
+基于上述两点认识，拉拉总是很少麻烦李斯特，自己悄没声息地就把许多难题给处理了。
 
-　　当然，她也学过：劳心者治人，劳力者治于人。
+当然，她也学过：劳心者治人，劳力者治于人。
 
-　　之前，她没有想过，她在DB正是属于人们常说的那种“典型的干活的人”——就是个廉价的“劳力者”。
+之前，她没有想过，她在DB正是属于人们常说的那种“典型的干活的人”——就是个廉价的“劳力者”。
 
-　　浴缸里的水温慢慢凉下来，拉拉也渐渐地理出了一条思路：
+浴缸里的水温慢慢凉下来，拉拉也渐渐地理出了一条思路：
 
-　　就是因为自己和李斯特沟通不够，遇到事情都是自己默默干了，所以他根本没有意识到发生过多少问题，有多少工作量，难度有多大。于是，他就不认为承担这些职责的人是重要的。鉴于他不认为你是重要的，他就不会对你好，甚至可能对你不好。
+就是因为自己和李斯特沟通不够，遇到事情都是自己默默干了，所以他根本没有意识到发生过多少问题，有多少工作量，难度有多大。于是，他就不认为承担这些职责的人是重要的。鉴于他不认为你是重要的，他就不会对你好，甚至可能对你不好。
 
-　　而王伟干的是销售，销售工作有一个显著特点，就是工作指标特别容易量化。每个月卖得多了或是少了，给公司赚了多少钱，一眼就看得清清楚楚。他卖得好，所以，他是重要的，EQ低一点也没关系。
+而王伟干的是销售，销售工作有一个显著特点，就是工作指标特别容易量化。每个月卖得多了或是少了，给公司赚了多少钱，一眼就看得清清楚楚。他卖得好，所以，他是重要的，EQ低一点也没关系。
 
-　　拉拉找到李斯特不待见自己的原因后，忍着气，定下心来给自己规定了几条和李斯特工作的原则，试用之后，果然有效。
+拉拉找到李斯特不待见自己的原因后，忍着气，定下心来给自己规定了几条和李斯特工作的原则，试用之后，果然有效。
 
-　　于是，拉拉的BLOG里就有了下面这段博文：
+于是，拉拉的BLOG里就有了下面这段博文：
 
-　　干了活还受气该怎么办？
+干了活还受气该怎么办？
 
-　　1.我把每一阶段的主要工作任务和安排都做成清晰简明的表格，发送给我的老板，告诉他如果有反对意见，在某某日期前让我知道，不然我就照计划走——这个过程主要就是让他对工作量有个概念。其中提出日期限定，是要逼他去看工作表（老板们很忙，你的mail他常常会视而不见，甚至有可能根本不看）；用简明的表格来表述，是为了便于老板阅读，使他不需要花很多时间就能快速看清楚报告的内容。
+1. 我把每一阶段的主要工作任务和安排都做成清晰简明的表格，发送给我的老板，告诉他如果有反对意见，在某某日期前让我知道，不然我就照计划走——这个过程主要就是让他对工作量有个概念。其中提出日期限定，是要逼他去看工作表（老板们很忙，你的mail他常常会视而不见，甚至有可能根本不看）；用简明的表格来表述，是为了便于老板阅读，使他不需要花很多时间就能快速看清楚报告的内容。
 
-　　2.我刚开始接管这个部门的时候，本着尽量不给老板找麻烦的原则，我会尽量不把难题交给他，很多困难都自己想办法协调解决。
+2. 我刚开始接管这个部门的时候，本着尽量不给老板找麻烦的原则，我会尽量不把难题交给他，很多困难都自己想办法协调解决。
 
-　　但是这样做的结果，就是使老板轻视我，他根本不了解工作的难度。
+但是这样做的结果，就是使老板轻视我，他根本不了解工作的难度。
 
-　　后来我就改变了这个策略，遇到问题我还是自己想法解决，但是每当这个时候，我会先带着我的解决方案去找老板开会。
+后来我就改变了这个策略，遇到问题我还是自己想法解决，但是每当这个时候，我会先带着我的解决方案去找老板开会。
 
-　　每次开会，我会尽量挑一个他比较清醒而不烦躁的时候，单独地只讨论某一方面的一个大的困难。
+每次开会，我会尽量挑一个他比较清醒而不烦躁的时候，单独地只讨论某一方面的一个大的困难。
 
-　　我让他了解困难的背景。等他听了头痛的时候，我再告诉他，我有两个方案，分析优劣给他听，他就很容易在两个中挑一个出来了。
+我让他了解困难的背景。等他听了头痛的时候，我再告诉他，我有两个方案，分析优劣给他听，他就很容易在两个中挑一个出来了。
 
-　　这样，他对我工作中的困难的难度和出现的频率、我的专业，以及我积极主动解决问题的态度和技巧，就有了比较好的认识。
+这样，他对我工作中的困难的难度和出现的频率、我的专业，以及我积极主动解决问题的态度和技巧，就有了比较好的认识。
 
-　　3.每次大一点的项目实施过程中，我会主动地在重要阶段给老板一些信息，就算过程再顺利，我也会让他知道进程如何，把这当中的大事brief（摘要）给他。最后出结果的时候，我会及时地通知他，免得他不放心，我从来不需要他来问我结果。
+3. 每次大一点的项目实施过程中，我会主动地在重要阶段给老板一些信息，就算过程再顺利，我也会让他知道进程如何，把这当中的大事brief（摘要）给他。最后出结果的时候，我会及时地通知他，免得他不放心，我从来不需要他来问我结果。
 
-　　这样，他觉得把事情交给我，可以很放心，执行力绝对没有问题。
+这样，他觉得把事情交给我，可以很放心，执行力绝对没有问题。
 
-　　4.在需要和别的部门的总监们，或者和president（总裁）和VP（副总裁）一起工作的时候，我特别注意清晰简洁而主动的沟通，尽量考虑周到。写mail或者说话，都非常小心，不出现有歧意的内容，基本上不出现总监们抱怨我的情况，这样一来，我的老板就觉得我很牢靠，不会给他找麻烦。
+4. 在需要和别的部门的总监们，或者和president（总裁）和VP（副总裁）一起工作的时候，我特别注意清晰简洁而主动的沟通，尽量考虑周到。写mail或者说话，都非常小心，不出现有歧意的内容，基本上不出现总监们抱怨我的情况，这样一来，我的老板就觉得我很牢靠，不会给他找麻烦。
 
 
 ### 3
 　　拉拉口中的“我们”，其实是“我”的意思，她跟着李斯特干了一段，不知觉中受李斯特的风格影响，为自己要钱的时候，就用了个“我们”。
 
 
-### 4
+## 杜拉拉的信
 
-机上遇到一男人，操背景口音，三十二三，婚否不详，一、容貌体面。
+机上遇到一男人，操北京口音，三十二三，婚否不详，一、容貌体面。
 
-　　优势：技术好，聪明，没坏心，乐观
+优势：技术好，聪明，没坏心，乐观
 
-　　劣势：有点懒，自傲，责任心与意志力指数一般
+劣势：有点懒，自傲，责任心与意志力指数一般
 
-　　其所谓“恰当的活法”，即早日退休。自称懒得跳槽，却没遇到猎头怂恿，对好职位的标准心生疑惑。
+其所谓“恰当的活法”，即早日退休。自称懒得跳槽，却没遇到猎头怂恿，对好职位的标准心生疑惑。
 
-　　要早点退休，没有办法，除非早日获得财务自由。说来说去，还是个钱字。获得钱的路子很多，要合法的多赚钱，谋个好职位、打份好工是条路子。
+要早点退休，没有办法，除非早日获得财务自由。说来说去，还是个钱字。获得钱的路子很多，要合法的多赚钱，谋个好职位、打份好工是条路子。
 
-　　怎么才能谋个好职位呢?首先，得搞明白什么样的职位算是个好职位;然后，你的让自己有足够的资格去谋取那个职位。
+怎么才能谋个好职位呢?首先，得搞明白什么样的职位算是个好职位;然后，你的让自己有足够的资格去谋取那个职位。
 
-　　一、关于什么样的职位算好职位
+### 一、关于什么样的职位算好职位
 
 　　1.你的找一家好公司
 
 　　什么是好公司?
 
-　　1)产品附加值高，生意好，并且从业务线看，具备持续发展的能力和前景;2)有专业的/聪明能干的/经验丰富的/并且为人现实的管理层，在把握这公司，并且有保护一贯这样用人的制度的公司;3)有严格的财务制度，对预算、费用和利润等于投入产出有关的内容，敏感并且具有强控制力的公司;4)崇尚客户导向/市场导向/结果导向/执行力的公司;5)有专业严谨全面的流程和制度，并且其执行有利于推动业务的良性发展，具有控制性和实操性兼备的特点;
+1)产品附加值高，生意好，并且从业务线看，具备持续发展的能力和前景;
+2)有专业的/聪明能干的/经验丰富的/并且为人现实的管理层，在把握这公司，并且有保护一贯这样用人的制度的公司;
+3)有严格的财务制度，对预算、费用和利润等于投入产出有关的内容，敏感并且具有强控制力的公司;
+4)崇尚客户导向/市场导向/结果导向/执行力的公司;
+5)有专业严谨全面的流程和制度，并且其执行有利于推动业务的良性发展，具有控制性和实操性兼备的特点;
 
 　　---总结起来，就是一家具有持续赢利能力的牛B公司
 
@@ -265,15 +269,25 @@
 
 　　1.对上级
 
-　　1)你要知道与他建立一致性，他觉得重要的事情，你就觉得重要，他认为紧急的事情你也认为紧急，你得和他劲往一处使--通常情况下，你得表现和能力好还是不好，主要是你得直接主管说了算的;2)你的具备从上级那里获得支持和资源的能力--别你干的半死，你的老板还对你爱搭不理的，那你就不具备本条件的能力。
+1)你要知道与他建立一致性，他觉得重要的事情，你就觉得重要，他认为紧急的事情你也认为紧急，你得和他劲往一处使--通常情况下，你得表现和能力好还是不好，主要是你得直接主管说了算的;
+
+2)你的具备从上级那里获得支持和资源的能力--别你干的半死，你的老板还对你爱搭不理的，那你就不具备本条件的能力。
 
 　　2.对下级
 
-　　1)要能明确有效的设置正确的工作目标，使其符合SMART原则;2)要能有效地管理团队内部冲突;3)要能公平合理地控制分配团队资源;4)要有愿望和能力发展指导下属，并恰当授权;5)恰当的赞扬鼓励认可团队成员;6)尊重不同想法，分享知识经验和信息，建立信任的氛围。
+1)要能明确有效的设置正确的工作目标，使其符合SMART原则;
+2)要能有效地管理团队内部冲突;
+3)要能公平合理地控制分配团队资源;
+4)要有愿望和能力发展指导下属，并恰当授权;
+5)恰当的赞扬鼓励认可团队成员;
+6)尊重不同想法，分享知识经验和信息，建立信任的氛围。
 
 　　3.对内、外部客户
 
-　　1)愿意提供协助和增值服务(不然要你干嘛);2)善意聆听并了解需求(搞明白人家需要的到底是啥);3)可靠的提供产品和服务，及时跟进(千万注意及时);4)了解组织架构并具影响力。及早地建立并维护关键的关系，是这样的关系有利于你达成业绩(专业而明智的选择);
+1)愿意提供协助和增值服务(不然要你干嘛);
+2)善意聆听并了解需求(搞明白人家需要的到底是啥);
+3)可靠的提供产品和服务，及时跟进(千万注意及时);
+4)了解组织架构并具影响力。及早地建立并维护关键的关系，是这样的关系有利于你达成业绩(专业而明智的选择);
 
 　　比如你想取得一个内部职位，你的搞明白了，谁是关键的做决定的人物，别傻乎乎不小心给这个人留下坏印象。
 
@@ -281,7 +295,12 @@
 
 　　4.对本岗任务
 
-　　1)清楚自己的定位和职责--别搞不清楚自己是谁，什么是自己的活，知道什么该报告，什么要自己独立做决定;2)结果导向--设立高目标，信守承诺，承担责任，注重质量、速度和期限，争取主动，无需督促;3)清晰的制定业务计划并有效实施;4)学习能力--愿意学，坚持学，及时了解行业趋势/竞争状况和技术更新，并学以致用;5)承受压力的能力--严峻的工作条件下，能坚忍不拔，想办法获取资源、支持和信息，努力以实现甚至超越目标;6)适应的能力--如适应多项要求并存，优先级变换以及情况不明等工作条件，及时调整自己的行为和风格来适应不同个人及团队的需要(工作重心会变化，老板会换人，客人也会变，别和他们说“我过去如何如何”，多去了解对方的风格)
+1)清楚自己的定位和职责--别搞不清楚自己是谁，什么是自己的活，知道什么该报告，什么要自己独立做决定;
+2)结果导向--设立高目标，信守承诺，承担责任，注重质量、速度和期限，争取主动，无需督促;
+3)清晰的制定业务计划并有效实施;
+4)学习能力--愿意学，坚持学，及时了解行业趋势/竞争状况和技术更新，并学以致用;
+5)承受压力的能力--严峻的工作条件下，能坚忍不拔，想办法获取资源、支持和信息，努力以实现甚至超越目标;
+6)适应的能力--如适应多项要求并存，优先级变换以及情况不明等工作条件，及时调整自己的行为和风格来适应不同个人及团队的需要(工作重心会变化，老板会换人，客人也会变，别和他们说“我过去如何如何”，多去了解对方的风格)
 
 　　早日实现退休理想--你需要眼光和资格。 共勉2007
 
@@ -334,3 +353,23 @@
 ### 6
 
 　　拉拉先说：“乔治，我知道，我这一上任，你更忙了。因为每个新老板上任的头两个月，都会向下属索取很多资料，问很多问题--这必定会占用你不少时间。你再克服克服，过两个月，等我熟悉情况了，你就会享受到新经理的好处了。”拉拉的意思，虽然索取信息是做主管的权力，还是该向当事人打个招呼，至少表明你意识到你的到来增加他工作量了，让人家能感受好一点。
+
+
+## 空降兵怎么关系呢？
+
+
+小说里没有具体分析Tony林是如何处理关系的，但是总结起来不外乎下面四点：
+
+　　第一，定位要准。知道自己能够做什么，为什么来做，怎么才能够做好，自己要把职业做到什么样，对自我角色要根据具体的职位和管理权限有一个定位。其次对于当前的企业状况有非常详细的了解。
+
+　　第二，态度诚恳。无论是哪个级别的管理者在刚进入企业时一定要用非常诚恳的态度去对待每一个人，毕竟别人还不认识你，对你充满了排斥，如果你自己还要高高在上，那么没人会配合你，只会抱着膀子无法工作，无论是管理什么具体工作，管理中最重要的就是管人，要想和其他人处理好关系，放下自己的架子，诚恳的让别人知道你是为了事业的专业态度非常重要。
+
+　　第三，主动出击。你进入到新的企业，不要天真地以为各个部门会主动向你说明情况，给你提供所有的资料让你了解。你必须有针对性地主动去寻找资料信息，多跟新下属们交流，多向新上司请示，尽快熟悉新环境，发现新问题。
+
+　　第四，后发制人。作为新来的管理者，下属或其他部门老下属免不了会给你"下马威"，他们会对你的"从前"很感兴趣，你的优势是什么，劣势是什么，他们都会逐项研究，细细打听。这个时候，你必须把自己当成职场新人来看待，刚刚入行时候的那些"规矩"要重新捡起来，找前辈，找靠山，多问为什么，少说怎么办。待你把周边的情况掌握得差不多了，再动手"修理"这般不听话的下属不迟。
+
+　　打个比方吧，想做一个成功的空降兵，你就要有"新媳妇"的心理素质，先拜公婆，再拜兄弟姑嫂，然后你才是这个家的女主人。那些失败的空降兵，多数是因为高估了自己的能力，闯过大江大海之后，却在阴沟里翻船。其实，你想想看，能够做到这个位置上，每个人的业务能力是不会差太多的，都是能人。之所以高薪把你请过来，还不是让你管理这些"能人"？想让能人听你管，不能只在业务上让他们服气，更需要用管理手腕降伏他们，让他们乖乖被你管。这才是真正的高人一筹。
+
+杜拉拉语录
+
+　　身为空降兵，不如别人根基深，没有资格和老板叫板，你就得彻底紧跟老板，和老板来个共同成长。
