--- a/[2] python/[3] 程序结构.md
+++ b/[2] python/[3] 程序结构.md
@@ -38,9 +38,15 @@ Expression3
 else:#可省
     Expression4
 Expression5#这个语句已经和if-else无关了
+#注意：如果某个分支为真，那么执行完对应语句后，直接退出if，而不像C语言一样继续执行下一个elseif，因此不需要每句都写上break
 ```
 
-#注意：如果某个分支为真，那么执行完对应语句后，直接退出if，而不像C语言一样继续执行下一个elseif，因此不需要每句都写上break
+## 三元运算符
+一种可以把if...else写到一行的技术
+```py
+value=true-expr if confition else false-expr
+```
+
 
 # 异常处理
 ```python
