--- a/[9] 读书/[9-6] 科技/电子商务.md
+++ b/[9] 读书/[9-6] 科技/电子商务.md
@@ -19,50 +19,52 @@ C2C
 
 
 ## 网络营销效果
-评价体系
-印象：广告被下载、显示的次数
-点击率（CTR）：广告被点击的概率
-访问率（VTR）：广告未被立即点击，但30天内被顾客访问的概率
-网页浏览量
-黏度：访问者在一个网站上的平均停留时间
-uv：unique visitors
-忠诚度：随着网页浏览量变化，一年内再次购物的顾客人数占顾客总数的百分比
-到达率：购买者占uv的比率，（大致认为是购买者占整个市场购买者的比例）
-最近一次消费
-获得率
-转换率：访问者变成顾客的比例
-浏览购买比：浏览产品的顾客中购买的比例
-购物车转换率：点击“加入购物车”后，最终成为订单的比例
-浏览加入购物车的比例
-结账转换率：开始结账后最终成为订单的比例
-放弃率：中途放弃购物车离开网站的购物者比例
-保留率：（类似忠诚度）现有顾客中，定期购物者的比例
-流失率：首次购买后，一年内不再购买的顾客百分比
-
-电子邮件类：
-打开率：邮件接收者打开邮件的概率
-传递率：邮件接收者收到邮件的概率
-点击率：邮件被点击的概率
-跳退率：邮件没被传递到的概率
-退订率：点击退订的概率
-转换率：邮件接收者实际购买的概率
+（评价体系）
+- 印象：广告被下载、显示的次数
+- 点击率（CTR）：广告被点击的概率
+- 访问率（VTR）：广告未被立即点击，但30天内被顾客访问的概率
+- 网页浏览量
+- 黏度：访问者在一个网站上的平均停留时间
+- uv：unique visitors
+- 忠诚度：随着网页浏览量变化，一年内再次购物的顾客人数占顾客总数的百分比
+- 到达率：购买者占uv的比率，（大致认为是购买者占整个市场购买者的比例）
+- 最近一次消费
+- 获得率
+- 转换率：访问者变成顾客的比例
+- 浏览购买比：浏览产品的顾客中购买的比例
+- 购物车转换率：点击“加入购物车”后，最终成为订单的比例
+- 浏览加入购物车的比例
+- 结账转换率：开始结账后最终成为订单的比例
+- 放弃率：中途放弃购物车离开网站的购物者比例
+- 保留率：（类似忠诚度）现有顾客中，定期购物者的比例
+- 流失率：首次购买后，一年内不再购买的顾客百分比
 
 
+### 电子邮件类
+- 打开率：邮件接收者打开邮件的概率
+- 传递率：邮件接收者收到邮件的概率
+- 点击率：邮件被点击的概率
+- 跳退率：邮件没被传递到的概率
+- 退订率：点击退订的概率
+- 转换率：邮件接收者实际购买的概率
 
-其它零售业务
-网络保险
-旅游
-美食
-新闻和内容服务
 
-供应链中的牛鞭效应
+## 其它零售业务
+网络保险  
+旅游  
+美食  
+新闻和内容服务  
+
+## 供应链中的牛鞭效应
 尽管商店的实际销售情况相当稳定并可预测，但是分销商的订单却大幅度摆动，造成大量的浪费
 
-
-电子政务 G2C,C2G,G2G,G2B
+## 电子政务
+G2C,C2G,G2G,G2B
+## 知识平台
 电子学习和虚拟大学
 网络出版和电子书
 知识共享，wiki
 
-拍卖
-英式拍卖，统一规格多件物品的拍卖，拍卖结束后，中标者按照各自的出价支付
+## 拍卖
+- 英式拍卖，统一规格多件物品的拍卖，拍卖结束后，中标者按照各自的出价支付
+- 荷兰式拍卖，同一规格多件物品的拍卖
