--- a/[2] python/[9.1] turtle库.md
+++ b/[2] python/[9.1] turtle库.md
@@ -1,16 +1,16 @@
 
 #### 绘制五角星
 ```python
-from turtle import *
-fillcolor("red")
-begin_fill()
+import turtle
+turtle.fillcolor("red")
+turtle.begin_fill()
 while 1:
-    forward(200)
-    right(144)
-    print(pos())
-    if abs(pos())<1:
+    turtle.forward(200)
+    turtle.right(144)
+    print(turtle.pos())
+    if abs(turtle.pos())<1:
         break
-end_fill()
+turtle.end_fill()
 ```
 注1：forward()  
 注2：lef()，right()  
