--- a/[9] 读书/[9-6] 科技/大数据.md
+++ b/[9] 读书/[9-6] 科技/大数据.md
@@ -75,51 +75,18 @@
 3、通讯制式
 
 
+## 决战大数据
 
+- 一个严重的问题就是断层，使用数据的人并不知道数据是如何产生的。
+- 必须对数据的价值和稳定性洞若观火。
+- 数据应用要小而美，小不是指数据量小，而是指用用的目标很具体。
+- 注意盲点，包括物理盲点和逻辑盲点。数据分析师要对数据抱有敬畏之心，不可轻易放过一个可能产生问题的点。
+- 当新工作毫无头绪时，问三个问题：1.公司面对的3大问题是什么？2.未来3个月中，要解决的问题是什么？3.过去1个月内，你做对了什么，做错了什么。如果三个问题回答不出来，就没有资格在这个岗位上
+- 如何还原一个场景，是一个很复杂的事情（搜索T恤确买了手机的案例）
+- 面对无线数据，数据分析师首先要有多屏思维
+- 内三板斧：混（与业务部门深刻接触）、通、晒（让业务部门能够充分使用数据做出决策）
+- 外三板斧：存（用经验判断有价值的数据才存）、管、用
 
-## 1
-最具影响力的20本学术书（排名不分先后）
-
-《时间简史》（斯蒂芬·霍金）
-
-《女权辩护》（玛丽·沃斯通克拉夫特）
-
-《纯粹理性批判》（伊曼努尔·康德）
-
-《1984》（乔治·奥威尔）
-
-《物种起源》（查尔斯·达尔文）
-
-《东方学》（爱德华·萨义德）
-
-《寂静的春天》（雷切尔·卡森）
-
-《共产党宣言》（卡尔·马克思、弗里德里希·恩格斯）
-
-
-《莎士比亚全集》
-
-《女太监》（杰梅茵·格里尔）
-
-《英国工人阶级的形成》（E.P.汤普森）
-
-《相对论的含义》（艾伯特·爱因斯坦）
-
-《裸猿》（德斯蒙德·莫利斯）
-
-《君主论》（尼可罗·马基亚维利）
-
-《理想国》（柏拉图）
-
-《人的权利》（托马斯·潘恩）
-
-《第二性》（西蒙娜·德·波伏瓦）
-
-《识字的用途》（理查德·霍加特）
-
-《国富论》（亚当·斯密）
-
-《观看之道》（约翰·伯格）
 
 
 
