--- a/[9] 读书/[9-5] 社会经济学/教材/消费者行为学.md
+++ b/[9] 读书/[9-5] 社会经济学/教材/消费者行为学.md
@@ -145,3 +145,54 @@ A组出现认知失调，但找到个理由“为一笔收入撒个小谎”
 2. 精耕细作的农业经济。几乎未出现大地主、大农场，小农经济
 3. 家国同构型社会结构。每个人都恪守规范和义务。
 4. 农耕和游牧世界的冲突和融合
+
+
+## 社会阶层
+社会阶层表现在社会地位上的差异。社会地位是人在社会关系中的位置以及围绕这一位置所形成的权利义务关系。  
+
+
+。。。阶层的性质。。。  
+
+
+为什么阶层存在？为什么上市公司总经理的薪水比普通员工高几十倍？
+1. 功能主义观点。高级职位在社会上更重要，为了鼓励人们争夺这些职位，让这些重要职位被最有能力的人占据，从而使社会更好的运转，应当给予足够高的鼓励。（反对意见称，很难证明这些职位一定重要）
+2. 冲突论。高阶层会极力维护和强化自身的位置。
+3. 伦斯基综合观点。试图融合上述观点。对于剩余产品很少的社会，社会将更大份额的资源分配给那些承担重要工作的人，功能主义起作用。舍与产品足够多时，各个群体为获得更多剩余产品争斗，获胜的群体成为精英层。由此形成的社会阶层，主要不是个人能力，而是个体所在群体所决定的。
+
+
+### 社会阶层与消费
+1. 炫耀性消费
+2. 补偿性消费。对X的需求可以通过对X的获取来解决，但是也可通过对Y的获取来解决。如果使用了Y ，这个过程就叫作补偿性消费。如为了表示对堵车的不满而买一瓶饮料，为了摆脱家务的厌烦而去逛街或与自已的伴侣吵架后去买衣服。
+3. 消费分层
+
+
+## 群体
+按照类型分为正式群体、非正式群体，主要群体、次要群体，隶属群体、参照群体等。  
+例如：对一个人来说，可能隶属于家庭群体、朋友群体、正式社会群体、购物群体、工作群体等。  
+
+重点介绍参照群体：
+- 接触群体（contactual group）消费者具有成员资格，价值观和行为一致的群体
+- 渴望群体（aspirational group）消费者不具有成员资格，但仰慕或渴望加入的群体
+- 否认群体（disclaimant group）消费者具有成员资格，但态度和价值观背离的群体
+- 避免群体（avoidance group）消费者尽力避免加入的群体
+
+
+### 从众
+原因
+1. 行为参照。在情景不确定时，人需要找到他人行为作为参考，大多数人的行为自然就成了最可靠的参考。
+2. 对偏离的恐惧。
+3. 群体凝聚力。群体凝聚力越强，群体成员越愿意采取一致行为，例如宗教成员。
+
+
+影响因素
+1. 群体特性
+    - 群体的一致性。群体其它成员的意见越一致，个体从众的可能性越大
+    - 群体的规模。规模越大，从众的可能性越大
+    - 群体专长。群体成员在某一方面越有专长，个体越有可能从众
+2. 消费者德行
+    - 消费者的自信。越自信月不容易从众
+    - 消费者的介入水平。如果消费者尚未表达看法，更容易从众。如果已经表达看法，不容易从众。
+    - 消费者对群体的认同程度。越认同，越容易从众。
+
+
+案例（阿希现象）：聚会式推销中，推销员观察表情，请最认同的人先发言，第二认同的再发言，多次之后，人们都倾向于认同。
