--- a/[9] 读书/[9-5] 社会经济学/教材/[1.1] 教材经济学.md
+++ b/[9] 读书/[9-5] 社会经济学/教材/[1.1] 教材经济学.md
@@ -144,8 +144,8 @@ Q_2(Q_1)=0
 $max:\pi=P(Q_1+Q_2+...+Q_n)-TC_1-TC_2-...-TC_n$
 ### 斯塔克尔博领导模型
 1是领导者，2是从属者
-先计算$\frac{\partial pi_2}{\partial Q_2}=0$得到$Q_2(Q_1)$
-代入计算$\pi_1$解方程：$\frac{d \pi_1}{d Q_1}=0$
+先计算$\dfrac{\partial pi_2}{\partial Q_2}=0$得到$Q_2(Q_1)$
+代入计算$\pi_1$解方程：$d\frac{d \pi_1}{d Q_1}=0$
 
 **[这里有很多图表和知识需要补充]**
 要素市场（需求方面）
