--- a/[2] python/[3] 程序结构.md
+++ b/[2] python/[3] 程序结构.md
@@ -22,30 +22,7 @@ value=true-expr if confition else false-expr
 ```
 
 
-# 异常处理
-```python
-try:
-    <body>
-except <ErrorType1>:
-    <handle1>
-except <ErrorType2>:
-    <handle2>
-except:#可以不加错误类型
-    <handle3>
-else:#可选项，try无异常，那么执行这一块
-    pass
-finally:#无论是否异常，执行这一块
-    pass
-```
-- ValueError
-- NameError
-- SyntaxError#表达式错误
-- TypeError
 
-## 抛出异常
-```
-raise(NameError)
-```
 
 # 循环语句while
 ```python
@@ -73,7 +50,14 @@ for i in 'hellow':
 ```
 
 for循环在直接在序列中遍历，因此，在for循环中改变list，可以影响下一次for循环  
-！！！这一点可以弄出很多编程技巧
+！！！这一点可以搞出一些编程技巧
+```py
+for i in object:
+    Expression1
+else:
+    Expression2
+# for循环完成后，会执行Expression2,如果被break跳出，就不会执行Expression2
+```
 
 ## 关于range
 
@@ -85,3 +69,28 @@ y2=[x*x for x in range(10) if x%3]
 range(10)，等价于：range(0,10,1)
 
 # break continue 功能与C语言类似
+
+# 异常处理
+```python
+try:
+    <body>
+except <ErrorType1>:
+    <handle1>
+except <ErrorType2>:
+    <handle2>
+except:#可以不加错误类型
+    <handle3>
+else:#可选项，try无异常，那么执行这一块
+    pass
+finally:#无论是否异常，执行这一块
+    pass
+```
+- ValueError
+- NameError
+- SyntaxError#表达式错误
+- TypeError
+
+## 抛出异常
+```
+raise(NameError)
+```
